--- a/KAGServers.vcxproj.filters
+++ b/KAGServers.vcxproj.filters
@@ -1,126 +1,135 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-	<ItemGroup>
-		<ClCompile Include="src\ofApp.cpp">
-			<Filter>src</Filter>
-		</ClCompile>
-		<ClCompile Include="src\main.cpp">
-			<Filter>src</Filter>
-		</ClCompile>
-		<ClCompile Include="src\Button.cpp">
-			<Filter>src</Filter>
-		</ClCompile>
-		<ClCompile Include="src\CSVReader.cpp">
-			<Filter>src</Filter>
-		</ClCompile>
-		<ClCompile Include="src\GArray.cpp">
-			<Filter>src</Filter>
-		</ClCompile>
-		<ClCompile Include="src\GConfig.cpp">
-			<Filter>src</Filter>
-		</ClCompile>
-		<ClCompile Include="src\GDict.cpp">
-			<Filter>src</Filter>
-		</ClCompile>
-		<ClCompile Include="src\Generic.cpp">
-			<Filter>src</Filter>
-		</ClCompile>
-		<ClCompile Include="src\GNumber.cpp">
-			<Filter>src</Filter>
-		</ClCompile>
-		<ClCompile Include="src\GString.cpp">
-			<Filter>src</Filter>
-		</ClCompile>
-		<ClCompile Include="src\Image.cpp">
-			<Filter>src</Filter>
-		</ClCompile>
-		<ClCompile Include="src\KAPI.cpp">
-			<Filter>src</Filter>
-		</ClCompile>
-		<ClCompile Include="src\KAsyncLoader.cpp">
-			<Filter>src</Filter>
-		</ClCompile>
-		<ClCompile Include="src\KServer.cpp">
-			<Filter>src</Filter>
-		</ClCompile>
-		<ClCompile Include="src\KServerList.cpp">
-			<Filter>src</Filter>
-		</ClCompile>
-		<ClCompile Include="src\Listbox.cpp">
-			<Filter>src</Filter>
-		</ClCompile>
-		<ClCompile Include="src\ServerView.cpp">
-			<Filter>src</Filter>
-		</ClCompile>
-		<ClCompile Include="src\UIElement.cpp">
-			<Filter>src</Filter>
-		</ClCompile>
-	</ItemGroup>
-	<ItemGroup>
-		<Filter Include="src">
-			<UniqueIdentifier>{d8376475-7454-4a24-b08a-aac121d3ad6f}</UniqueIdentifier>
-		</Filter>
-	</ItemGroup>
-	<ItemGroup>
-		<ClInclude Include="src\ofApp.h">
-			<Filter>src</Filter>
-		</ClInclude>
-		<ClInclude Include="src\Button.hpp">
-			<Filter>src</Filter>
-		</ClInclude>
-		<ClInclude Include="src\CSVReader.h">
-			<Filter>src</Filter>
-		</ClInclude>
-		<ClInclude Include="src\GArray.h">
-			<Filter>src</Filter>
-		</ClInclude>
-		<ClInclude Include="src\GConfig.h">
-			<Filter>src</Filter>
-		</ClInclude>
-		<ClInclude Include="src\GDict.h">
-			<Filter>src</Filter>
-		</ClInclude>
-		<ClInclude Include="src\Generic.h">
-			<Filter>src</Filter>
-		</ClInclude>
-		<ClInclude Include="src\Generics.h">
-			<Filter>src</Filter>
-		</ClInclude>
-		<ClInclude Include="src\GNumber.h">
-			<Filter>src</Filter>
-		</ClInclude>
-		<ClInclude Include="src\GString.h">
-			<Filter>src</Filter>
-		</ClInclude>
-		<ClInclude Include="src\Image.hpp">
-			<Filter>src</Filter>
-		</ClInclude>
-		<ClInclude Include="src\KAPI.hpp">
-			<Filter>src</Filter>
-		</ClInclude>
-		<ClInclude Include="src\KAsyncLoader.hpp">
-			<Filter>src</Filter>
-		</ClInclude>
-		<ClInclude Include="src\KServer.hpp">
-			<Filter>src</Filter>
-		</ClInclude>
-		<ClInclude Include="src\KServerList.hpp">
-			<Filter>src</Filter>
-		</ClInclude>
-		<ClInclude Include="src\Listbox.hpp">
-			<Filter>src</Filter>
-		</ClInclude>
-		<ClInclude Include="src\ServerView.hpp">
-			<Filter>src</Filter>
-		</ClInclude>
-		<ClInclude Include="src\UIElement.hpp">
-			<Filter>src</Filter>
-		</ClInclude>
-		<ClInclude Include="src\Utils.h">
-			<Filter>src</Filter>
-		</ClInclude>
-	</ItemGroup>
-	<ItemGroup>
-		<ResourceCompile Include="icon.rc" />
-	</ItemGroup>
+  <ItemGroup>
+    <Filter Include="src">
+      <UniqueIdentifier>{d8376475-7454-4a24-b08a-aac121d3ad6f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\JSON">
+      <UniqueIdentifier>{afa95acb-87bc-4347-ab32-79f516fd4ceb}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\GUI">
+      <UniqueIdentifier>{3e7c9eed-8394-4d76-abf3-f8e8231ac1cd}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\KAG">
+      <UniqueIdentifier>{d058fc40-ec88-4e0c-b6d4-24b87e8d8fc4}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="icon.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\ofApp.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="src\GArray.h">
+      <Filter>src\JSON</Filter>
+    </ClInclude>
+    <ClInclude Include="src\GConfig.h">
+      <Filter>src\JSON</Filter>
+    </ClInclude>
+    <ClInclude Include="src\GDict.h">
+      <Filter>src\JSON</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Generic.h">
+      <Filter>src\JSON</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Generics.h">
+      <Filter>src\JSON</Filter>
+    </ClInclude>
+    <ClInclude Include="src\GNumber.h">
+      <Filter>src\JSON</Filter>
+    </ClInclude>
+    <ClInclude Include="src\GString.h">
+      <Filter>src\JSON</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Utils.h">
+      <Filter>src\JSON</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Button.hpp">
+      <Filter>src\GUI</Filter>
+    </ClInclude>
+    <ClInclude Include="src\UIElement.hpp">
+      <Filter>src\GUI</Filter>
+    </ClInclude>
+    <ClInclude Include="src\ServerView.hpp">
+      <Filter>src\GUI</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Listbox.hpp">
+      <Filter>src\GUI</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Image.hpp">
+      <Filter>src\GUI</Filter>
+    </ClInclude>
+    <ClInclude Include="src\CSVReader.h">
+      <Filter>src\KAG</Filter>
+    </ClInclude>
+    <ClInclude Include="src\KAPI.hpp">
+      <Filter>src\KAG</Filter>
+    </ClInclude>
+    <ClInclude Include="src\KAsyncLoader.hpp">
+      <Filter>src\KAG</Filter>
+    </ClInclude>
+    <ClInclude Include="src\KServer.hpp">
+      <Filter>src\KAG</Filter>
+    </ClInclude>
+    <ClInclude Include="src\KServerList.hpp">
+      <Filter>src\KAG</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\main.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ofApp.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\GArray.cpp">
+      <Filter>src\JSON</Filter>
+    </ClCompile>
+    <ClCompile Include="src\GConfig.cpp">
+      <Filter>src\JSON</Filter>
+    </ClCompile>
+    <ClCompile Include="src\GDict.cpp">
+      <Filter>src\JSON</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Generic.cpp">
+      <Filter>src\JSON</Filter>
+    </ClCompile>
+    <ClCompile Include="src\GNumber.cpp">
+      <Filter>src\JSON</Filter>
+    </ClCompile>
+    <ClCompile Include="src\GString.cpp">
+      <Filter>src\JSON</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Button.cpp">
+      <Filter>src\GUI</Filter>
+    </ClCompile>
+    <ClCompile Include="src\UIElement.cpp">
+      <Filter>src\GUI</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ServerView.cpp">
+      <Filter>src\GUI</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Listbox.cpp">
+      <Filter>src\GUI</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Image.cpp">
+      <Filter>src\GUI</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CSVReader.cpp">
+      <Filter>src\KAG</Filter>
+    </ClCompile>
+    <ClCompile Include="src\KAPI.cpp">
+      <Filter>src\KAG</Filter>
+    </ClCompile>
+    <ClCompile Include="src\KAsyncLoader.cpp">
+      <Filter>src\KAG</Filter>
+    </ClCompile>
+    <ClCompile Include="src\KServer.cpp">
+      <Filter>src\KAG</Filter>
+    </ClCompile>
+    <ClCompile Include="src\KServerList.cpp">
+      <Filter>src\KAG</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
